[package]
name = "sd-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["cargo", "derive"] }
anyhow = "1.0.80"
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
llama-core = { version = "0.14.1", path = "/Volumes/Dev/secondstate/me/LlamaEdge/api-server/llama-core", features = [
    "logging",
] }
endpoints = { version = "0.12.0", path = "/Volumes/Dev/secondstate/me/LlamaEdge/api-server/endpoints" }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
multipart-2021 = "0.19.0"
