[package]
name = "sd-api-server"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
endpoints = { version = "=0.24.0" }
hyper = { version = "0.14", features = ["full"] }
llama-core = { version = "=0.26.1", features = ["logging"] }
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
multipart-2021 = "0.19.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1"
tokio = { version = "^1.36", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }
once_cell = "1.18"
url = "2.5.4"

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
